force-app/main/default/objects/Fitness_Device_Metric__c/Fitness_Device_Metric__c.object-meta.xml
<CustomObject>
    <label>Fitness Device Metric</label>
    <nameField>
        <label>Fitness Device Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fitness Device Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>