force-app/main/default/objects/Fitness_Device_Metric__c/fields/Workout_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Workout_Date_Time__c</fullName>
    <label>Workout Date/Time</label>
    <type>DateTime</type>
</CustomField>