force-app/main/default/objects/Fitness_Device_Metric__c/fields/Workout_Type__c.field-meta.xml
<CustomField>
    <fullName>Workout_Type__c</fullName>
    <label>Workout Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>